fix: header after corner was showing overlapping alert after corner

--- a/alfa.host/area/app/views/client/alfa/src/main.css
+++ b/alfa.host/area/app/views/client/alfa/src/main.css
@@ -557,7 +557,7 @@
         @apply bg-linear-to-r relative top-0 flex w-full scale-100 gap-12 rounded-sm border-l-4 border-slate-400 from-slate-100 to-slate-50 py-7 pl-9 text-left text-slate-900 opacity-100 *:first:w-full;
 
         &.alert-dismissable {
-            @apply rounded-b-none rounded-t-3xl border-x-0 last:border-b last:border-white px-0 py-4 text-white/80 shadow-[0_50px_50px] shadow-slate-200 before:absolute before:-bottom-6 before:left-0 before:h-6 before:w-6 before:rounded-tl-[1.5rem] before:shadow-[-0.25rem_-0.25rem_0_0.25rem_var(--color-slate-100)] after:absolute after:-bottom-6 after:right-0 after:h-6 after:w-6 after:rounded-tr-[3rem] after:shadow-[0.25rem_-0.25rem_0_0.25rem_var(--color-slate-50)];
+            @apply z-1 rounded-b-none rounded-t-3xl border-x-0 last:border-b last:border-white px-0 py-4 text-white/80 shadow-[0_50px_50px] shadow-slate-200 before:absolute before:-bottom-6 before:left-0 before:h-6 before:w-6 before:rounded-tl-[1.5rem] before:shadow-[-0.25rem_-0.25rem_0_0.25rem_var(--color-slate-100)] after:absolute after:-bottom-6 after:right-0 after:h-6 after:w-6 after:rounded-tr-[3rem] after:shadow-[0.25rem_-0.25rem_0_0.25rem_var(--color-slate-50)];
 
             a {
                 @apply border-1.5 border-white bg-transparent bg-none ring-0 hover:border-white/80 hover:text-white/80;
